@@ -36,3 +36,4 @@
 * AdvancedHasManyAssociation renamed to HasNAssociation
 * HasManyAssociation refactored to use HasNAssociation superclass
 * Slight spec tweaks to accomodate the updates
+* HasOneAssociation refactored to use HasNAssociation superclass
